/************************************************************************************
 * Copyright (C) 2012-2018 E.R.P. Consultores y Asociados, C.A.                     *
 * Contributor(s): Yamel Senih ysenih@erpya.com                                     *
 * This program is free software: you can redistribute it and/or modify             *
 * it under the terms of the GNU General Public License as published by             *
 * the Free Software Foundation, either version 2 of the License, or                *
 * (at your option) any later version.                                              *
 * This program is distributed in the hope that it will be useful,                  *
 * but WITHOUT ANY WARRANTY; without even the implied warranty of                   *
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.	See the                     *
 * GNU General Public License for more details.                                     *
 * You should have received a copy of the GNU General Public License                *
 * along with this program.	If not, see <https://www.gnu.org/licenses/>.            *
 ************************************************************************************/
syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.spin.grpc.util";
option java_outer_classname = "ADempiereBase";
option objc_class_prefix = "HLW";

package data;

//  Empty message
message Empty {
	
}

//	BusinessProcess Selections
message KeyValueSelection {
	int32 selection_id = 1;
	repeated KeyValue values = 2;
}

// Key and Value pairs
message KeyValue {
	string key = 1;
	Value value = 2;
}

// Define value for object
message Value {
	int32 int_value = 1;
	int64 long_value = 2;
	bool boolean_value = 3;
	string string_value = 4;
	Decimal decimal_value = 5;
	enum ValueType {
		UNKNOWN = 0;
		INTEGER = 1;
		DECIMAL = 2;
		BOOLEAN = 3;
		STRING = 4;
		DATE = 5;
	}
	ValueType value_type = 6;
}

// Define numeric types
message Decimal {
	string decimal_value = 1;
	int32 scale = 2;
}

// Resource Chunk
message Resource {
    bytes data = 1;
}

// Attachment
message Attachment {
	string attachment_uuid = 1;
	string title = 2;
	string text_msg = 3;
	repeated ResourceReference resource_references = 4;
}

//	Resource reference
message ResourceReference {
	string resource_uuid = 1;
	string file_name = 2;
	Decimal file_size = 3;
	string description = 4;
	string text_msg = 5;
	string content_type = 6;
}

// Query for Request Object
message Criteria {
	string table_name = 1;
	string query = 2;
	string where_clause = 3;
	string order_by_clause = 4;
	string reference_uuid = 5;
	repeated Condition conditions = 6;
	repeated Value values = 7;
	repeated OrderByProperty order_by_column = 8;
	int64 limit = 9;
}

// Order By Property
message OrderByProperty {
	string column_name = 1;
	enum OrderType {
		ASCENDING = 0;
		DESCENDING = 1;
	}
	//	Operators
	OrderType order_type = 2;
}

// Condition for query data
message Condition {
	string column_name = 1;
	Value value = 2;
	Value value_to = 3;
	repeated Value values = 4;
	enum Operator {
		EQUAL = 0;
		NOT_EQUAL = 1;
		LIKE = 2;
		NOT_LIKE = 3;
		GREATER = 4;
		GREATER_EQUAL = 5;
		LESS = 6;
		LESS_EQUAL = 7;
		BETWEEN = 8;
		NOT_NULL = 9;
		NULL = 10;
		IN = 11;
		NOT_IN = 12;
	}
	//	Operators
	Operator operator = 5;
	repeated Condition conditions = 6;
}

// Zoom Information
message RecordReferenceInfo {
	string uuid = 1;
	string window_uuid = 2;
	string display_name = 3;
	string table_name = 4;
	string where_clause = 5;
	int64 record_count = 6;
}

// Document Item
message DocumentStatus {
	string value = 1;
	string name = 2;
	string description = 3;
}

// Document Item
message DocumentAction {
	string value = 1;
	string name = 2;
	string description = 3;
}

// Value Object from ADempiere
message Entity {
	int32 id = 1;
	string uuid = 2;
	string table_name = 3;
	map<string, Value> values = 4;
}

//	Response with log and values from server
message ProcessLog {
	string uuid = 1;
	string name = 2;
	string description = 3;
	string instance_uuid = 4;
	bool is_error = 5;
	string summary = 6;
	string result_table_name = 7;
	bool is_processing = 8;
	int64 last_run = 9;
	repeated ProcessInfoLog logs = 10;
	map<string, Value> parameters = 11;
	ReportOutput output = 12;
}

//	BusinessProcess Log result
message ProcessInfoLog {
	int32 record_id = 1;
	string log = 2;
}

// Translations Item
message Translation {
	string language = 1;
	string uuid = 2;
	map<string, Value> values = 3;
}

// Dashboard
message Dashboard {
	string window_uuid = 1;
	string browser_uuid = 2;
	string name = 3;
	string description = 4;
	string html = 5;
	int32 column_no = 6;
	int32 line_no = 7;
	bool is_collapsible = 8;
	bool is_open_by_default = 9;
	bool is_event_required = 10;
	string file_name = 11;
	string dashboard_type = 12;
	string chart_type = 13;
	int32 id = 14;
	string uuid = 15;
}

// Print Format
message PrintFormat {
	string uuid = 1;
	string name = 2;
	string description = 3;
	string table_name = 4;
	bool is_default = 5;
	string report_view_uuid = 6;
}

// Record Log
message EntityLog {
	int32 log_id = 1;
	int32 id = 2;
	string uuid = 3;
	string table_name = 4;
	string session_uuid = 5;
	string user_uuid = 6;
	string user_name = 7;
	string transaction_name = 8;
	enum EventType {
		INSERT = 0;
		UPDATE = 1;
		DELETE = 2;
	}
	EventType event_type = 9;
	int64 log_date = 10;
	repeated ChangeLog change_logs = 11; 
}

// Record Log
message ChangeLog {
	string column_name = 4;
	string display_column_name = 5;
	string old_value = 10;
	string old_display_value = 11;
	string new_value = 12;
	string new_display_value = 13;
	string description = 14;
}

// Report View
message ReportView {
	string uuid = 1;
	string name = 2;
	string description = 3;
	string table_name = 4;
}

// Drill Table
message DrillTable {
	string table_name = 1;
	string print_name = 2;
}

//	Used for get output from report / BusinessProcess like PDF, HTML another result for show to end user
message ReportOutput {
	string uuid = 1;
	string name = 2;
	string description = 3;
	string file_name = 4;
	string output = 5;
	string mime_type = 6;
	int64 data_cols = 7;
	int64 data_rows = 8;
	string header_name = 9;
	string footer_name = 10;
	string print_format_uuid = 11;
	string report_view_uuid = 12;
	string table_name = 13;
	bytes output_stream = 14;
	//	Output Type
	string report_type = 15;
}